src/scss/common/_base.scss
/* ... */
.popup-menu-toggle {
  position: relative;

  &:not(.last-clicked) {
    .popup-menu {
      display: none;
      content-visibility: hidden;
    }
  }

  &._popup-right-if-last:last-child {
    .popup-menu {
      &:last-child {
        --translateX: translateX(0);
        right: 0;
        left: unset;
      }
    }
  }
}

.popup-menu {
  --translateX: translateX(0);
  --translateY: translateY(0);
  --focus-offset: -2px;
  position: absolute;
  z-index: 10;
  background: var(--popup-menu-background);
  color: var(--popup-menu-color);
  font-size: 14px;
  line-height: 22px;
  text-shadow: none;
  white-space: nowrap;
  text-align: center;
  padding: 4px 0;
  border-radius: var(--layout-border-radius-small);
  min-width: 64px;
  max-width: min(280px, 80vw);
  box-shadow: var(--popup-menu-box-shadow, var(--box-shadow-m));
  overflow: hidden;
  transform: var(--translateX) var(--translateY);
  contain: content; // Improve performance

  &._top {
    top: var(--vertical-offset, -8px);
    --translateY: translateY(-100%);
  }

  &._bottom {
    bottom: var(--vertical-offset, -8px);
    --translateY: translateY(100%);
  }

  &._center {
    left: 50%;
    --translateX: translateX(-50%);
  }

  &._justify-right {
    right: 0;
  }

  &._align-items-right :is(a, label, button, .popup-item) {
    justify-content: flex-start;
    text-align: left;
  }

  &._v-scrolling {
    max-height: min(250px, 80vh);
    overflow: hidden scroll;

    @include bp(desktop) {
      &:not(._v-scrolling-scrollbar) {
        scrollbar-width: none; // FF
      }

      &:not(._v-scrolling-scrollbar)::-webkit-scrollbar {
        width: 0;
      }
    }
  }

  hr {
    margin: 0;
    border-bottom: 1px solid currentColor;
    opacity: 0.25;
  }

  :is(a, label, button, .popup-item) {
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    color: var(--popup-menu-color);
    font-size: inherit;
    font-weight: 400;
    line-height: 22px;
    text-align: center;
    padding: 5px 12px;
    width: 100%;

    > :not(i, .icon) {
      text-overflow: ellipsis;
      overflow: hidden;
    }

    &._align-left {
      justify-content: flex-start;
      text-align: left;
    }

    &:hover {
      background: var(--popup-menu-background-hover);
      color: var(--popup-menu-color-hover);
    }

    :is(i, .icon, .text-icon) {
      display: inline-block;
      color: currentColor;
      line-height: 1;
      text-align: center;
      min-width: 20px;
    }
  }

  .current-chapter :is(a, label, button, .popup-item):not(:hover) {
    background: var(--popup-menu-background-selected);
  }
}

.popup-heading {
  cursor: default;
  position: relative;
  font-family: var(--ff-note);
  font-size: 12px;
  line-height: 1.2;
  padding: 4px 12px;
  opacity: 0.5;
}

.no-results {
  color: var(--fg-950);
  padding: 0 2px;
}

html:not(.logged-in) body:not(.logged-in) {
  .checkmark {
    display: none;
    content-visibility: hidden;
  }
}
/* ... */

